@@ -551,35 +551,35 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Add Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    LTEXT           "To add a new entry, simply fill in the fields below. At least a title and a password are required. If you have set a default username, it will appear in the username field.",IDC_STATIC,7,9,261,24
+    LTEXT           "Group:",IDC_STATIC,7,42,22,8
     COMBOBOX        IDC_GROUP,44,40,109,128,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Title:",IDC_STATIC,7,58,16,8
     EDITTEXT        IDC_TITLE,44,55,109,14,ES_AUTOHSCROLL
+    LTEXT           "&Username:",IDC_STATIC,7,74,35,8
     EDITTEXT        IDC_USERNAME,44,71,109,14,ES_AUTOHSCROLL
+    LTEXT           "&Password:",IDC_STATIC,7,90,34,8
     EDITTEXT        IDC_PASSWORD,44,87,109,14,ES_PASSWORD | ES_AUTOHSCROLL
+    LTEXT           "&Confirm Password:",IDC_STATIC,7,103,34,15
     EDITTEXT        IDC_PASSWORD2,44,103,109,14,ES_PASSWORD | ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "&Notes:",IDC_STATIC,7,122,22,8
     EDITTEXT        IDC_NOTES,44,120,158,78,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    LTEXT           "U&RL:",IDC_STATIC_URL,7,204,18,8
     EDITTEXT        IDC_URL,44,203,158,14,ES_AUTOHSCROLL
+    LTEXT           "&Autotype:",IDC_STATIC_AUTO,7,225,31,8
     EDITTEXT        IDC_AUTOTYPE,44,220,109,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,209,39,59,14
     PUSHBUTTON      "Cancel",IDCANCEL,209,55,59,14
     PUSHBUTTON      "Help (F1)",ID_HELP,209,71,59,14
-    PUSHBUTTON      "Generate",IDC_RANDOM,214,126,54,14
-    CONTROL         "Override Policy",IDC_OVERRIDE_POLICY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,215,142,53,22
+    PUSHBUTTON      "&Generate",IDC_RANDOM,214,126,54,14
+    CONTROL         "&Override Policy",IDC_OVERRIDE_POLICY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,215,142,53,22
     PUSHBUTTON      "&Show",IDC_SHOWPASSWORD,165,86,37,15,BS_CENTER
     PUSHBUTTON      "&More >>",IDC_MORE,209,173,59,14
     PUSHBUTTON      "&Clear",IDC_LTIME_CLEAR,209,248,22,14
     PUSHBUTTON      "&Set",IDC_LTIME_SET,242,248,22,14
-    CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,274,34,10
+    CONTROL         "&Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,274,34,10
     EDITTEXT        IDC_MAXPWHISTORY,46,272,18,14,ES_NUMBER
     CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,63,272,10,14,WS_EX_CLIENTEDGE
-    LTEXT           "To add a new entry, simply fill in the fields below. At least a title and a password are required. If you have set a default username, it will appear in the username field.",IDC_STATIC,7,9,261,24
-    LTEXT           "Group:",IDC_STATIC,7,42,22,8
-    LTEXT           "Title:",IDC_STATIC,7,58,16,8
-    LTEXT           "Username:",IDC_STATIC,7,74,35,8
-    LTEXT           "Password:",IDC_STATIC,7,90,34,8
-    LTEXT           "Confirm Password:",IDC_STATIC,7,103,34,15
-    LTEXT           "Notes:",IDC_STATIC,7,122,22,8
-    LTEXT           "URL:",IDC_STATIC_URL,7,204,18,8
-    LTEXT           "Autotype:",IDC_STATIC_AUTO,7,225,31,8
     GROUPBOX        "Random Password",IDC_STATIC,209,116,68,51
     LTEXT           "Password expires on:",IDC_STATIC_LTIME,11,251,67,8
     LTEXT           "Whenever",IDC_LTIME,81,251,120,20,WS_TABSTOP
@@ -594,33 +594,33 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Edit Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    LTEXT           "To edit this entry from the current password file, simply make the desired changes in the fields below.  Note that at least a title and a password are required.",IDC_EDITEXPLANATION,6,7,271,19
+    LTEXT           "Group:",IDC_STATIC,6,36,22,8
     COMBOBOX        IDC_GROUP,52,34,109,128,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Title:",IDC_STATIC,6,52,16,8
     EDITTEXT        IDC_TITLE,52,49,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
+    LTEXT           "&Username:",IDC_STATIC,6,68,35,8
     EDITTEXT        IDC_USERNAME,52,65,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
+    LTEXT           "&Password:",IDC_STATIC,6,84,34,8
     EDITTEXT        IDC_PASSWORD,52,81,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN
+    LTEXT           "&Confirm Password:",IDC_STATIC,6,96,34,16
     EDITTEXT        IDC_PASSWORD2,52,98,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED
+    LTEXT           "&Notes:",IDC_STATIC,6,115,22,8
     EDITTEXT        IDC_NOTES,52,114,152,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
+    LTEXT           "U&RL:",IDC_STATIC_URL,6,223,18,8
     EDITTEXT        IDC_URL,52,221,152,14,ES_AUTOHSCROLL | ES_WANTRETURN
+    LTEXT           "&Autotype:",IDC_STATIC_AUTO,6,241,31,8
     EDITTEXT        IDC_AUTOTYPE,52,238,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
     DEFPUSHBUTTON   "OK",IDOK,212,33,64,14
     PUSHBUTTON      "Cancel",IDCANCEL,212,49,64,14
     PUSHBUTTON      "Help (F1)",ID_HELP,212,65,64,14
     PUSHBUTTON      "&Generate",IDC_RANDOM,212,113,64,14
-    CONTROL         "Override Policy",IDC_OVERRIDE_POLICY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,220,128,54,20
+    CONTROL         "&Override Policy",IDC_OVERRIDE_POLICY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,220,128,54,20
     PUSHBUTTON      "&Show",IDC_SHOWPASSWORD,164,82,37,14,BS_CENTER | BS_MULTILINE
-    PUSHBUTTON      "&Password History",IDC_PWHIST,212,158,64,14,BS_MULTILINE
+    PUSHBUTTON      "Password &History",IDC_PWHIST,212,158,64,14,BS_MULTILINE
     PUSHBUTTON      "&More >>",IDC_MORE,212,196,64,14
     PUSHBUTTON      "&Clear",IDC_LTIME_CLEAR,211,328,22,14
     PUSHBUTTON      "&Set",IDC_LTIME_SET,246,328,22,14
-    LTEXT           "To edit this entry from the current password file, simply make the desired changes in the fields below.  Note that at least a title and a password are required.",IDC_EDITEXPLANATION,6,7,271,19
-    LTEXT           "Group:",IDC_STATIC,6,36,22,8
-    LTEXT           "Title:",IDC_STATIC,6,52,16,8
-    LTEXT           "Username:",IDC_STATIC,6,68,35,8
-    LTEXT           "Password:",IDC_STATIC,6,84,34,8
-    LTEXT           "Confirm Password:",IDC_STATIC,6,96,34,16
-    LTEXT           "Notes:",IDC_STATIC,6,115,22,8
-    LTEXT           "URL:",IDC_STATIC_URL,6,223,18,8
-    LTEXT           "Autotype:",IDC_STATIC_AUTO,6,241,31,8
     GROUPBOX        "Random Password",IDC_STATIC,208,100,71,51
     CONTROL         "",IDC_TOP_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT WS_VISIBLE,6,216,270,1
     GROUPBOX        "",IDC_STATIC_DTEXPGROUP,6,321,270,31
