@@ -108,12 +108,14 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Add Group",                   ID_MENUITEM_ADDGROUP
         MENUITEM SEPARATOR
+        MENUITEM "C&lear Clipboard\tCtrl+Del",  ID_MENUITEM_CLEARCLIPBOARD
+        MENUITEM SEPARATOR
         MENUITEM "&Copy Password to Clipboard\tCtrl+C", ID_MENUITEM_COPYPASSWORD
         MENUITEM "Copy &Username to Clipboard\tCtrl+U", ID_MENUITEM_COPYUSERNAME
         MENUITEM "Copy &Notes to Clipboard\tCtrl+G", ID_MENUITEM_COPYNOTESFLD
-        MENUITEM "C&lear Clipboard\tCtrl+Del",  ID_MENUITEM_CLEARCLIPBOARD
-        MENUITEM "&Browse to URL\tCtrl+L",  ID_MENUITEM_BROWSE
-        MENUITEM "Perform Auto type\tCtrl+T",   ID_MENUITEM_AUTOTYPE
+        MENUITEM "Copy URL to Clipboard\tCtrl+Alt+L", ID_MENUITEM_COPYURL
+        MENUITEM "&Browse to URL\tCtrl+L",      ID_MENUITEM_BROWSE
+        MENUITEM "Perform Auto &type\tCtrl+T",  ID_MENUITEM_AUTOTYPE
     END
     POPUP "&View"
     BEGIN
@@ -154,13 +156,14 @@ BEGIN
         MENUITEM "Copy &Username to Clipboard", ID_MENUITEM_COPYUSERNAME
         MENUITEM "&Copy Password to Clipboard", ID_MENUITEM_COPYPASSWORD
         MENUITEM "Copy &Notes to Clipboard",    ID_MENUITEM_COPYNOTESFLD
+        MENUITEM "Copy &URL to Clipboard",      ID_MENUITEM_COPYURL
         MENUITEM SEPARATOR
-        MENUITEM "&Browse to URL\tCtrl+L",      ID_MENUITEM_BROWSE
+        MENUITEM "&Browse to URL",              ID_MENUITEM_BROWSE
         MENUITEM "Edit/&View Entry...",         ID_MENUITEM_EDIT
         MENUITEM "Delete Entry",                ID_MENUITEM_DELETE
         MENUITEM "Rename Entry",                ID_MENUITEM_RENAME
-        MENUITEM "Perform Auto type\tCtrl+T",   ID_MENUITEM_AUTOTYPE
-        MENUITEM "&Duplicate Entry\tCtrl+D",    ID_MENUITEM_DUPLICATEENTRY
+        MENUITEM "Perform Auto type",           ID_MENUITEM_AUTOTYPE
+        MENUITEM "&Duplicate Entry",            ID_MENUITEM_DUPLICATEENTRY
     END
 END
 
@@ -302,10 +305,13 @@ BEGIN
     "A",            ID_MENUITEM_ADD,        VIRTKEY, CONTROL
     "B",            ID_MENUITEM_BACKUPSAFE, VIRTKEY, CONTROL
     "C",            ID_MENUITEM_COPYPASSWORD, VIRTKEY, CONTROL
+    "C",            ID_MENUITEM_COLLAPSEALL, VIRTKEY, CONTROL, ALT
     "D",            ID_MENUITEM_DUPLICATEENTRY, VIRTKEY, CONTROL
+    "E",            ID_MENUITEM_EXPANDALL,  VIRTKEY, CONTROL, ALT
     "F",            ID_MENUITEM_FIND,       VIRTKEY, CONTROL
     "G",            ID_MENUITEM_COPYNOTESFLD, VIRTKEY, CONTROL
     "L",            ID_MENUITEM_BROWSE,     VIRTKEY, CONTROL
+    "L",            ID_MENUITEM_COPYURL,    VIRTKEY, CONTROL, ALT
     "N",            ID_MENUITEM_NEW,        VIRTKEY, CONTROL
     "O",            ID_MENUITEM_OPEN,       VIRTKEY, CONTROL
     "Q",            ID_MENUITEM_EXIT,       VIRTKEY, CONTROL
